--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ header {
 
 .flexcontainer {
     justify-content: center;
+    font-size: 20px;
 }
 
 .flexcontainer2 {
@@ -49,6 +50,11 @@ header {
     justify-content: center;
 }
 
+nav {
+    justify-content: center;
+    width: 60%;
+}
+
 nav a {
     text-decoration: none;
     color: black;
@@ -58,27 +64,12 @@ nav,
 #logo,
 #login {
     display: flex;
-    align-items: center;
     padding: 10px;
-}
-
-nav {
-    min-height: 25px;
-    justify-content: center;
-    width: 720px;
-}
-
-.testo:first-child {
-    text-align: left
-}
-
-.testo:last-child {
-    text-align: right
 }
 
 #logo,
 #login {
-    width: 140px;
+    width: 20%;
 }
 
 #logo {
@@ -89,11 +80,15 @@ nav {
     justify-content: flex-end;
 }
 
-#yellow {
+.bordo {
+    border: 2px dashed black;
+}
+
+#giallo {
     background-color: #daa520;
 }
 
-#blue {
+#blu {
     background-color: #00008b;
 }
 
@@ -101,25 +96,6 @@ nav {
     background-color: #ee82ee;
     min-height: 300px;
     width: 800px;
-}
-
-#green {
-    background-color: #228b22;
-    min-height: 800px;
-    width: 1000px;
-}
-
-#salmone {
-    background-color: #f08080;
-    min-width: 300px;
-}
-
-#v_acqua {
-    background-color: #7fffd4;
-    min-width: 1000px;
-    min-height: 70px;
-    margin: 0 auto;
-    align-items: center;
 }
 
 .grigio {
@@ -137,11 +113,13 @@ nav {
     width: 600px;
 }
 
-.border {
-    border: 2px dashed black;
+#verde {
+    background-color: #228b22;
+    min-height: 800px;
+    width: 1000px;
 }
 
-.b_white {
+.bordo_bianco {
     border: 2px dashed white;
     background-color: #20b2aa;
     width: calc(100% /4);
@@ -151,6 +129,19 @@ nav {
     background-color: #23272a;
     padding: 0.625em 0 2em;
     border-bottom: 2px solid white;
+}
+
+#salmone {
+    background-color: #f08080;
+    min-width: 300px;
+}
+
+#v_acqua {
+    background-color: #7fffd4;
+    min-width: 1000px;
+    min-height: 70px;
+    margin: 0 auto;
+    align-items: center;
 }
 
 .rosa2 {
